--- a/web/static/jquery-ui-dark/jquery-ui.css
+++ b/web/static/jquery-ui-dark/jquery-ui.css
@@ -907,6 +907,7 @@ body .ui-tooltip {
 	/*border: 1px solid #353535;*/
 	background: #24292e;
 	color: #ddd;
+	scrollbar-width: thin;
 }
 .ui-widget-content a {
 	color: #ffffff;
