--- a/web/static/style.css
+++ b/web/static/style.css
@@ -13,6 +13,12 @@ body
     box-sizing: border-box;
 }
 
+.scrollable
+{
+    scrollbar-width: thin;
+    overflow:auto;
+}
+
 div
 {
     box-sizing: border-box;
@@ -158,6 +164,8 @@ span.fancytree-node.fancytree-folder.fancytree-expanded > span.fancytree-expande
     /*white-space:pre-wrap;*/
     padding: 0 0.5em;
 }
+
+scrollbar-width: thin;
 
 .ui-checkboxradio-label
 {
@@ -397,6 +405,7 @@ div.cat-topic-div:hover .cat-topic-btn-div
     /*padding:0.5em 1em;*/
 }
 
+/*
 div.cat-coll-container
 {
     padding:0.5em 0.25em 0 0.25em;
@@ -408,10 +417,12 @@ div.cat-coll-container > hr
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
 }
+*/
 
 .cat-coll
 {
-    padding:0;
+    /*padding:0;*/
+    padding:0.5em 0.25em 0 0.25em;
     margin: 0 0 0.5em 0;
 }
 
@@ -461,6 +472,7 @@ div.cat-coll-title-div:hover .cat-coll-btn-div
 {
     padding:0 1em 1em 0;
     font-size:1rem;
+    word-break:break-all;
 }
 
 .cat-coll-info-table
@@ -918,9 +930,18 @@ textarea
     font-size: 85%;
 }
 
+
 ::-webkit-scrollbar
 {
     width: 0.5em;
     height: 0.5em;
 }
 
+#MozillaGtkWidget.background
+{
+    scrollbar
+    {
+        background-color: transparent;
+        border-color: transparent;
+    }
+}
